--- a/scss/mixins/_lists.scss
+++ b/scss/mixins/_lists.scss
@@ -1,3 +1,5 @@
+@use "../settings-options" as *;
+
 // Lists
 
 // Unstyled keeps list items block level, just removes default browser padding and list-style
@@ -10,7 +12,8 @@
 @mixin list-item-variant($state, $bg, $color, $border, $hover-bg, $hover-color, $hover-border, $active-bg: $hover-bg, $active-color: $hover-color, $active-border: $hover-border) {
   @if $enable-list-item-action {
     .list-item-action.list-item-#{$state} {
-      @include hover-focus() {
+      &:hover,
+      &:focus {
         color: $hover-color;
         background-color: $hover-bg;
         border-color: $hover-border;
