--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -38,6 +38,12 @@
 @forward "component/breadcrumb";
 @forward "component/pagination";
 @forward "component/dropdown";
+@forward "component/nav";
+@forward "component/navbar";
+@forward "component/jumbotron";
+@forward "component/badge";
+@forward "component/media";
+@forward "component/card";
 
 // Print overrides
 @forward "core/print";
