--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -318,6 +318,8 @@ $enable-utility-position-sticky-bottom-responsive: true !default;
 $enable-utility-position-placement:         true !default;
 $enable-utility-position-translate:         true !default;
 
+$enable-utility-ratio:                      true !default;
+
 $enable-utility-sronly:                     true !default;
 $enable-utility-sronly-common:              true !default;
 $enable-utility-sronly-focusable:           true !default;
