--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -54,5 +54,8 @@
 @forward "component/tooltip";
 @forward "component/popover";
 
+// Utility classes
+@forward "utilities";
+
 // Print overrides
 @forward "core/print";
