--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -25,10 +25,17 @@ $enable-transitions-reduced:    true !default;      // true
 $enable-smooth-scroll:          true !default;      // true
 $enable-grid-classes:           true !default;      // true
 $enable-print-styles:           true !default;      // true
+$enable-palette:                true !default;      // true
 $enable-sizing:                 true !default;      // true
 $enable-bp-smallest:            false !default;     // false
 $enable-rfs-main:               false !default;       // true :TODO:
 $enable-color-warnings:         false !default;     // false
+
+// Palette
+// =====
+// List of levels to build CSS out for each of the palette themes
+// Valid levels 0-1000
+$palette-levels: 50 100 200 300 400 500 600 700 800 900 !default;
 
 // Palette levels for use in mix-context-colors() to determine
 // standardized contextual color mapping.
@@ -1330,3 +1337,106 @@ $popover-arrow-width:           1.25rem !default;
 $popover-arrow-height:          .625rem !default;
 $popover-arrow-color:           $popover-bg !default;
 $popover-arrow-outer-color:     $popover-border-color !default;
+
+// Radius utility
+// =====
+$radius-border-radius:      $border-radius !default;
+$radius-pill:               50rem !default;
+
+// Border radius
+// =====
+// Set values for border radius utility classes.
+$radii: (
+  "xsmall":   .1875rem,
+  "small":    .25rem,
+  "large":    .5rem,
+  "xlarge":   1rem,
+  "2xlarge":  1.5rem
+) !default;
+
+// Border width
+// =====
+// Set values for border width utility classes.
+// Note: `0px` width is already available through border removal utilites.
+$border-widths: (
+  "1": 1px,
+  "2": 2px,
+  "3": 3px,
+  "4": 4px,
+  "5": 5px
+) !default;
+
+$embed-fluid-default-ratio: #{"16 / 9"} !default;
+$aspect-ratios: (
+  "auto": auto,
+  "1x1": #{"1 / 1"},
+  "4x3": #{"4 / 3"},
+  "16x9": #{"16 / 9"},
+  "21x9": #{"21 / 9"}
+) !default;
+
+// Position offsets
+// =====
+// Offset pairs for placement position utilities.
+$position-offsets: (
+  "0":    0,
+  "50":   50%,
+  "100":  100%
+) !default;
+
+$position-top-offsets:              $position-offsets !default;
+$position-end-offsets:              $position-offsets !default;
+$position-bottom-offsets:           $position-offsets !default;
+$position-start-offsets:            $position-offsets !default;
+
+// Sizing
+// =====
+// Set values for width and height utility classes for sizing.
+$sizes: (
+  "25":   25%,
+  "50":   50%,
+  "75":   75%,
+  "100":  100%,
+  "auto": auto
+) !default;
+
+$sizes-width:                       $sizes !default;
+$sizes-height:                      $sizes !default;
+
+// Utilities
+$utility-display:       block, flex, inline, inline-block, inline-flex, grid, inline-grid, table, table-row, table-cell, none !default;
+$utility-overflow:      auto, hidden, scroll, visible !default;
+$utility-overflow-x:    auto, hidden, scroll, visible !default;
+$utility-overflow-y:    auto, hidden, scroll, visible !default;
+$utility-position:      static, relative, absolute, fixed, sticky !default;
+$utility-order-max:     6 !default;
+$utility-object-fit: (
+  "contain": contain,
+  "cover": cover,
+  "fill": fill,
+  "scale": scale-down,
+  "none": none
+) !default;
+$utility-opacity: (
+  "0": 0,
+  "25":.25,
+  "50": .5,
+  "75": .75,
+  "100": 1
+) !default;
+$utility-rotate: (
+  "45": rotate(45deg),
+  "90": rotate(90deg),
+  "135": rotate(135deg),
+  "180": rotate(180deg),
+  "225": rotate(45deg),
+  "270": rotate(270deg),
+  "315": rotate(315deg)
+) !default;
+$utility-zindex: (
+  n1: -1,
+  0: 0,
+  1: 1,
+  2: 2,
+  3: 3
+) !default;
