Remove testing file, slight color rework

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -73,15 +73,15 @@ $level-delta-hover-color:           100 !default;
 // Colors
 // =====
 // Base Colors
-$uibase:    #5e7182 !default;
+$uibase:    #5c7685 !default;
 $white:     #fff !default;
-$gray:      #666 !default;
+$gray:      #70787c !default;
 $black:     #000 !default;
-$red:       #d42314 !default;
-$green:     #0e8a16 !default;
+$red:       #d92a27 !default;
+$green:     #138835 !default;
 $blue:      #0055e9 !default;
-$cyan:      #1680a4 !default;
-$yellow:    #f8c223 !default;
+$cyan:      #10819f !default;
+$yellow:    #f9c215 !default;
 
 // Base UI Scale
 $uibase-50:   palette.palette($uibase, 50) !default;
